@@ -374,6 +374,7 @@ Included
 - `run` and `examine` now also enforce dependency-input overlap checks in their core staged-writer implementations (not only CLI wrapper parsing), with direct-core tests added.
 - `safe-run` now also enforces `--out` vs `--policy` / `--script` overlap checks in `safe_run.ts` core (not only CLI wrapper parsing), with direct-core tests added.
 - `safe-run`, `run`, and `examine` now fail closed when `--out` points to an existing non-directory path (`*_OUT_PATH_NOT_DIRECTORY`) instead of deleting/replacing that file.
+- `email unpack`, `email safe-run`, and `container scan` now also fail closed when `--out` points to an existing non-directory path (`*_OUT_PATH_NOT_DIRECTORY`) instead of deleting/replacing that file.
 - `safe-run`, `run`, and `examine` now fail closed when `--out` equals or overlaps the input path (`*_OUT_CONFLICTS_INPUT`), preventing staged-finalize cleanup from deleting or replacing the source input.
 - `email unpack` and `email safe-run` now also fail closed when `--out` equals or overlaps the input path, preventing staged-finalize cleanup from deleting or replacing source email inputs or normalized email exports.
 - `intake` now also fails closed when `--out` equals or overlaps the input path (`INTAKE_OUT_CONFLICTS_INPUT`), preventing staged-finalize cleanup from deleting or replacing the source input.
